@@ -1,3 +1,5 @@
+HEAD
+	+ Remove headTitle from models
 1.3.13
 	+ Fixed printable strings in interface view
 1.3.12
